# riemann

./: .gitignore  CMakeLists.txt  README.md  run_arap_param.sh  run_bd.sh  run_conformal_vol.sh  run_defo_transfer.sh  run_ff_driven_deform.sh  run_polycube.sh  run_spin_transform.sh  run_standing_wave.sh  run_vec_deformer.sh  run_volume_frame.sh
.github/workflows/: cmake-single-platform.yml
cmake/: FindIPOPT.cmake  FindMINPACK.cmake  FindPETSc.cmake
dat/: L_plane_cage.2d  ball_12k.tet  bar_edit.fv  bar_fix.fv  beam.deform.tet.vtk  beam.source.tet.vtk  butterfly10k_cons.ff  capsule_curv_change.txt  conformal_volume_ball.json  cube.tet  dt_horse_camel.cons  hole_bunny.json  hole_cube.json  hole_cylinder.json  hole_sphere.json  plane_1k.fv  plane_289.fv  plane_289_cage.2d  plane_re.ef  plane_re.fl  plane_re_sub2.fl  siggraph_plane.json  sphere_curv_change.txt  surf_sphere_cons.ff  wave_cube.ef  wave_cube.fl  wave_special_mesh.ef  wave_special_mesh.fl  wave_sphere.ef
dat/dragon/: constraint.fv  orig.tet.vtk  polycube.tet.vtk
dat/kitty/: polycube.tet.vtk
dat/tets/: ball.v2655.tet  ball.v282.tet  cube.c3k.vtk  cylinder.c8k.vtk  cylinder.v285.tet  eight.vtk  eightsmooth.vtk  fandisk.c58k.vtk  fandisk.c92k.vtk  fertility.vtk  kitty.v1449.tet.vtk  nut.vtk  rockerarm.c20k.vtk  rockerarm.vtk  sculpture.c59k.vtk  smooth_cube.vtk  sphere.c13k.vtk  sphere.c1k.vtk  torus.c2k.vtk  torus.vtk
examples/: CMakeLists.txt  ani_compr.json  anicompr_ball.json  anicompr_dress.json  anicompr_flag.json  boundvert.cc  compare_cubic_smooth.cc  conformal_volume_ball.json  test_amips.cc  test_ani_compression.cc  test_aqp.cc  test_arap.cc  test_arap_param.cc  test_bounded_dist.cc  test_complex.cc  test_conformal_volume.cc  test_cotmatrix.cc  test_cross_param.cc  test_ctm.cc  test_curvature.cc  test_dcp.cc  test_deform_transfer.cc  test_ff_deform.cc  test_grad_edit.cc  test_green.cc  test_green_2d.cc  test_green_3d.cc  test_harmonic.cc  test_hole_filling.cc  test_igl_geom.cc  test_jsoncpp.cc  test_lap_eigen.cc  test_local_edit.cc  test_lscm.cc  test_polycube.cc  test_shell_interp.cc  test_spin_trans.cc  test_tri_def_grad.cc  test_unit.cc  test_vec_field_deform.cc  (+5 more)
img/: resize.sh
script/: bernstein.wxm  compare-smooth.sh  deformation_gradient.wxm  log_format.sh  mips_related.wxm  orientated_uv_area.wxm  plot.tex  run_arap_param.mk  run_bd.sh  run_polycube.sh  run_volume_frame.mk  run_volume_frame.sh
src/: CMakeLists.txt  SH.mac  advanced_mips.cc  advanced_mips.h  aqp.cc  aqp.h  aqp.mac  arap_deform.cc  arap_deform.h  arap_param.cc  arap_param.h  area_normal_align_hes.cc  arpaca.h  blas_lapack.h  bounded_distortion.cc  bounded_distortion.h  cblas_f77.h  config.h  conformal_volume.cc  conformal_volume.h  cotmatrix.cc  cotmatrix.h  cubic_sym_sh.f90  def.h  deform_transfer.cc  deform_transfer.h  diffuse_dihedral_rot.cc  diffuse_dihedral_rot.h  dt_energy.mac  dual_graph.cc  dual_graph.h  energy.cc  energy.h  frame_field_deform.cc  frame_field_deform.h  frame_field_param.cc  frame_field_param.h  geometry_extend.cc  geometry_extend.h  grad_check.cc  (+60 more)
test/: CMakeLists.txt  test_diff.cc  test_ipopt.cc  test_ipopt_wrapper.cc
